2005-09-13  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl (::tkchat::StampVis): Indent text when a bookmark
	(::tkchat::BookmarkInit):          is set. Allow bookmarks to
	(::tkchat::BookmarkAdd):           be unset individually.
	(::tkchat::BookmarkToggle):        Enable/disable menu items as
	(::tkchat::BookmarkNext):          required. Fix bug were
	(::tkchat::BookmarkPrev):          bookmark could be set on
	(::tkchat::BookmarkClear):         wrong line from menu. Rename
	BookmarkAdd to BookmarkToggle. Change how bokmarks are added
	and searched for in text. Only one bookmark can be added to a
	logical line of text. BookmarkClear now does clear all
	bookmarks.

2005-09-12  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl (::tkchat::LoadHistoryFromIndex): Stop crash when
	history window is opened more than once.

	* tkchat.tcl (::tkchat::checkNick): Show user color correctly
	for first time post by a new user.

	* tkchat.tcl (::tkchat::Help): Create new procedure to
	(::tkchat::About):             auto-adjust tab indent based on
	(::tkchat::insertHelpText):    the width of the first column
	and make source help text easier to read and modify.
	
	* tkchat.tcl (::tkjabber::parseMsg): Convert messages from
	Conference Channel to System messages.

2005-07-22  Reinhard Max  <max@tclers.tk>

	* tkchat.tcl (::tkchat::addAction): Take care for empty actions.
	
2005-07-04  Joe Mistachkin  <joe@mistachkin.com>

	* tkchat.tcl (::tkchat::Help): Added myself to the about dialog
        (command alias support).

2005-06-24  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Fixed query encoding for askLEO.

2005-06-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (::tkchat::Help): Rearranged the About dialog and
	added a Quick Help entry.

2005-06-16  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl:
	Fix tags for action messages.
	Cleanup members in ::tkjabber::cleanup as well.